syntax = "proto3";

package register;

message RegisterRequest {
  string email = 1;
  string password = 2;
  string name = 3;
}

message RegisterResponse {
  string ocid = 2;
  string token = 3;
}

message UnregisterRequest { }

message UnregisterResponse {}
