syntax = "proto3";

package service.ourchat.session.mute.v1;

message MuteUserRequest {
  uint64 session_id = 1;
  // If user_ids is empty, all users will be muted
  repeated uint64 user_ids = 2;
}

message MuteUserResponse {}

message UnmuteUserRequest {
  uint64 session_id = 1;
  // If user_ids is empty, all users will be unmuted
  repeated uint64 user_ids = 2;
}

message UnmuteUserResponse {}
